# obs-chalk

./: .gitignore  CMakeLists.txt  CONTEXT.md  buildspec.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-plugin-scaffold-and-core-rendering/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-drawing-tools-mark-lifecycle-and-hotkeys/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-preview-interaction/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md  CONTEXT.md
.planning/phases/04-polish/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md  CONTEXT.md
.planning/phases/05-status-indicator-and-distribution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  CONTEXT-windows-preview.md  CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/locale/: en-US.ini
scripts/: dev-install.sh  windows-build.ps1
src/: chalk-dock.cpp  chalk-dock.hpp  chalk-mode.cpp  chalk-mode.hpp  chalk-source.cpp  chalk-source.hpp  mark-list.cpp  mark-list.hpp  plugin.cpp  tool-state.hpp
src/marks/: arrow-mark.cpp  arrow-mark.hpp  circle-mark.cpp  circle-mark.hpp  cone-mark.cpp  cone-mark.hpp  freehand-mark.cpp  freehand-mark.hpp  mark.hpp
